mutation to change interview to true once the checkmark is clicked with updated location, date and time

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -20,9 +20,9 @@ ul {
     width: 100%;
   }
 
-  .hidden {
+  /* .hidden {
     display: none;
-}
+} */
 
 .interviewBtn {
     background-color: white;
