--- a/client/src/style.css
+++ b/client/src/style.css
@@ -20,9 +20,9 @@ ul {
     width: 100%;
   }
 
-  /* .hidden {
+  .hidden {
     display: none;
-} */
+}
 
 .interviewBtn {
     background-color: white;
@@ -82,4 +82,8 @@ ul {
 }
 .custom-card-sing-app {
     margin-top: 20px;
+}
+
+.loginBtn {
+    background-color: black
 }
