changed blue background

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -88,7 +88,7 @@ ul {
 }
 .custom-card-sing-app {
     margin-top: 20px;
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 .loginBtn {
